--- a/app/templates/mainPage.html
+++ b/app/templates/mainPage.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for("static", filename="mainPage.css") }}">
 		<title>Pieniondz</title>
-    <script language="JavaScript" type="text/javascript" src="../static/jquery.2.2.4.min.js"></script>
     <script type="text/javascript">
     function tab(tab) {
       document.getElementById('tab1').style.display = 'none';
@@ -78,7 +77,7 @@
         </div>
 
         <div id="tab3" style="display: none;"><br>
-          <p>This is the text for tab 3.</p>
+          <p>{{ history }}</p>
         </div>
 
       </div>
